--- a/tex/seq64_concepts.tex
+++ b/tex/seq64_concepts.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2016-02-21
+% \update      2016-04-03
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -46,7 +46,7 @@
    A sequence can be armed or unarmed in three ways:
 
    \begin{itemize}
-      \item Clicking on the sequence/pattern box.
+      \item Clicking or Shift-clicking on a sequence/pattern box.
       \item Pressing the hot-key for that sequence/pattern box.
       \item Opening up the Song Editor and starting playback; the
             sequences arm/unarm depending on the layout of the
