--- a/tex/seq64_jack.tex
+++ b/tex/seq64_jack.tex
@@ -32,6 +32,9 @@
          is currently commented out.
    \end{enumerate}
 
+   In the meantime, the text files in the project's \texttt{contrib/notes}
+   directory provide some useful setup notes.
+
    First, if \textsl{Sequencer64} is run in JACK mode without JACK running on
    the system, it will take awhile to come up (in ALSA mode).  If run from the
    console, one will see:
