--- a/tex/seq64_menu.tex
+++ b/tex/seq64_menu.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-04-03
+% \update      2016-04-04
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -223,6 +223,11 @@
       \item The setting of the "manual ALSA ports" option,
          \texttt{--manual\_alsa\_ports} command-line option or the
          \texttt{[manual-alsa-ports]} section of the
+         \texttt{sequencer64.rc} configuration file, as described in
+         \sectionref{subsec:seq64_rc_file_other_midi}
+      \item The setting of the "reveal ALSA ports" option,
+         \texttt{--reveal\_alsa\_ports} command-line option or the
+         \texttt{[reveal-alsa-ports]} section of the
          \texttt{sequencer64.rc} configuration file, as described in
          \sectionref{subsec:seq64_rc_file_other_midi}
    \end{itemize}
