Initial pass at creating a section of tables showing available keystroke and mouse actions.

--- a/tex/seq64_menu.tex
+++ b/tex/seq64_menu.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-04-04
+% \update      2016-04-08
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -407,8 +407,9 @@
 \paragraph{Menu / File / Options / Keyboard }
 \label{paragraph:seq64_menu_file_options_keyboard}
 
-   \textsl{Sequencer64}, as befits a good application, allows extensive use of
-   keyboard shortcuts to make operations go faster than when using a mouse.
+   \textsl{Seq24}, as befits a good application, allows extensive use of
+   keyboard shortcuts to make operations go faster than when using a mouse,
+   and \textsl{Sequencer64} continues that tradition.
    The \textbf{Keyboard} tab allows for the configuration of these keyboard
    shortcuts.
 
@@ -596,6 +597,7 @@
    The alternate method is \textbf{fruity (similar to a certain well known
    sequencer)}.
 
+   \index{mouse!fruity}
    The alternate method is presumably that of the \textsl{Fruity Loops}
    (now \textsl{FL Studio}) sequencer.  The fruity mode seems to involve the
    following (based on scanning the source code):
