--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-03-16
+% \update      2016-04-07
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -808,7 +808,7 @@
    by too much, the note or notes will "wrap-around" to the end of the sequence
    boundary and grow more from the beginning of the sequence. 
    It is not clear if this new note has an ending time that is less than its
-   beginning time.  If it happens, you probably want to undo it.
+   beginning time.  If it happens, one probably ought to undo it.
 
    Note that notes can be shortened below the default note length by event
    compression.  Note that there is currently no way to change the length of
