--- a/tex/seq64_song_editor.tex
+++ b/tex/seq64_song_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-04-05
+% \update      2016-04-08
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -477,7 +477,7 @@
    \index{R marker}
    \textbf{L marker} (\textbf{R anchor}) on the measures ruler.
 
-   Once these anchors are in place, then use
+   Once these anchors are in place, one can then use
 	the \textsl{Collapse} and \textsl{Expand} buttons to modify the
    placement of the pattern events.
 
@@ -505,9 +505,8 @@
 
    To get out of the movement mode, press the
    \index{keys!x}
-   "x" key while in the performance editor, to "x-scape" from the movement mode.
-
-   We're still working on refining that feature.
+   "x" key while in the performance editor, to "x-scape" from the movement
+   mode.  We're still working on refining that feature.
 
 \subsection{Song Editor / Bottom Panel}
 \label{subsec:seq64_song_editor_bottom}
@@ -518,7 +517,7 @@
    \index{grow button}
    \index{song editor!grow}
    The \textbf{Grow} button adds to the number of measures that exist
-   in the song editor.    The visual effect is very subtle, resulting only
+   in the song editor. The visual effect is very subtle, resulting only
    in a small change in the thumb of the horizontal scroll-bar, unless one
    is at the right end of the piano roll.  Then, one can see the added
    measures.  Usually about 128 at a time are added, but this depends on the
