--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2016-04-03
+% \update      2016-04-07
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -428,6 +428,10 @@
 % Event Editor
 
 \input{seq64_event_editor}
+
+% Tables of keyboard and mouse actions
+
+\input{seq64_kbd_mouse}
 
 % Configuration file
 
